fixing dark mode feature & removing header in sign in and sign up page

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+body.dark-mode {
+    /* Add your dark mode styles here */
+    background-color: #2c3e50;
+    color: #ecf0f1;
+  }
+  
+  body.light-mode {
+    /* Add your light mode styles here */
+    background-color: #ecf0f1;
+    color: #2c3e50;
+  }
+
+  :root {
+    --background-color: #fff;
+    --text-color: #121416d8;
+    --link-color: #543fd7;
+}
+
+html[data-theme='light'] {
+    --background-color: #fff;
+    --text-color: #121416d8;
+    --link-color: #543fd7;
+}
+
+html[data-theme='dark'] {
+    --background-color: #212a2e;
+    --text-color: #F7F8F8;
+    --link-color: #828fff;
+}
